# alphaminer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.trunk/: trunk.yaml
app/: celery.py  celery_app.py  celery_main.py  main.py
app/api/: routes.py
app/controllers/: telegram_controller.py
app/core/: config.py
app/prompts/company_data/: function.json  prompt.json  schema.json
app/services/: ai_service.py  data_store_service.py  response_handler_service.py  telegram.py  telegram_service.py
app/workers/: celery_app.py  tasks.py
